chore: remove grpc config
